...
                title='Nouveau voyage'
            />}
            <View style={{marginHorizontal: 24, marginTop: 32}}>
                {actualTravel.map(tmpTravel => TravelBloc(tmpTravel))}
            </View>
            <View style={styles.sectionContainer}>
                <Text style={styles.sectionTitle}>Voyages à venir</Text>
                {furtherTravels.map(tmpTravel => TravelBloc(tmpTravel))}
            </View>
            <View style={styles.sectionContainer}>
                <Text style={styles.sectionTitle}>Voyages finis</Text>
                {previousTravels.map(tmpTravel => TravelBloc(tmpTravel))}
            </View>
...
